put section header on individual description

--- a/lesson07/instructors.html
+++ b/lesson07/instructors.html
@@ -39,6 +39,17 @@
     align-items: center;
 
   }
+/* try this section hover*/
+section:hover {
+  border: 3px solid red;
+}
+
+/* try this section hover*/
+
+
+
+
+
 
   </style>
 <body>
@@ -64,34 +75,39 @@
   <div class="box">
       <h1>Amy Smith </h1>
       <img src="07-images/instructor-bio-image2.png"  alt="Instructor2 " class="center">
+        <section>
       <p> Certification: Level 3 Coach</p>
       <p> Coaching Bow Styles: RECURVE</p>
       <p> Amy truly has a passion for archery. She comes from a long line of hunters, fisherman, and trappers of Canada. Amy  places a strong emphasis on safety and is enthusiastic about teaching. Amy also loves fitness, and  has been a YMCA group exercise and personal trainer for over 18 years.
         <p>
-
+  </section>
   </div>
 
   <div class="box">
       <h1>Nathan Lee </h1>
       <img src="07-images/instructor-bio-image3.png"  alt="Instructor3 " class="center">
+      <section>
       <p> Certification: Level 3 Coach</p>
       <p> Coaching Bow Styles: RECURVE</p>
       <p> <p> Certification: Level 3 Coach</p>
       <p> Coaching Bow Styles: RECURVE</p>
       <p> Nathan is an USA Archery Certified Level 3 NTS – Coach and has been teaching archery since 2009. He has been interested in archery since he nocked his first arrow while a Boy Scout at Scout camp. Nathan has many years of experience teaching people of all ages, experience gained as a Martial Arts Instructor and Studio Manager.
       </p>
+    </section>
   </div>
 
   <div class="box">
       <h1>Giap Nguyen-Founder</h1>
 
     <img src="07-images/instructor-bio-image4.png"  alt="Instructor4 " class="center">
+  <section>
     <p> Certification: Level 3 Coach</p>
     <p> Coaching Bow Styles: RECURVE</p>
     <p> <p> Certification: Level 3 Coach</p>
     <p> Coaching Bow Styles: RECURVE</p>
 
     <p> Nathan is an USA Archery Certified Level 3 NTS – Coach and has been teaching archery since 2009. He has been interested in archery since he nocked his first arrow while a Boy Scout at Scout camp. Nathan has many years of experience teaching people of all ages, experience gained as a Martial Arts Instructor and Studio Manager.
+</section>
     </p>
     </p>
 
