--- a/lesson07/instructors.html
+++ b/lesson07/instructors.html
@@ -15,8 +15,6 @@
       </nav>
 
 
-
-
      <body>
 <link rel="stylesheet" type="text/css" href="STYLES/no5-Styles-mock.css">
 <style>
@@ -24,9 +22,11 @@
     height: 250px;
     width:450px;
     border:rgb(68,68,68);
-    background: lightgrey;
+    /*
+    background: lightgrey;*/
+    background: rgb(236,183,34);
     padding: 25px;
-    margin: 25px
+    margin: 10px
   }
   .container{
     display: flex;
@@ -35,13 +35,15 @@
     flex-direction:row;
     flex-wrap:nowrap;
     justify-content:space-evenly;
+    margin-bottom: 25px
 
     align-items: center;
 
   }
 /* try this section hover*/
 section:hover {
-  border: 3px solid red;
+  border: 3px solid gray;
+  background-color:rgb(236,183,34);
 }
 
 /* try this section hover*/
