debug/run validator

--- a/lesson07/class-sched.html
+++ b/lesson07/class-sched.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
      <meta charset="utf-8">
      <title>Archery-Academy.HTML</title>
      <img src="07-images/archeryAcademy-logo-color.png"  alt="Archery Academy logo " class="center">
     <link rel="stylesheet" type="text/css" href="07-styles/07-styles.css">
+
 <header>
 
     <nav>
@@ -15,9 +16,10 @@
       <a href="instructors.html" target="instructors.html">INSTRUCTORS   /</a>
       <a href="email-us.html" target="email-us.html">EMAIL US   /</a>
     </nav>
-  </head>
-  <body>
+</header>
+
+
 <img src="07-images/Schedule-photo.jpg"  alt="Archery Schedule " class="center">
 
-  </body>
+
 </html>
