--- a/lesson07/index.html
+++ b/lesson07/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,7 +6,7 @@
      <title>Archery-Academy.HTML</title>
      <img src="07-images/archeryAcademy-logo-color.png"  alt="Archery Academy logo " class="center">
     <link rel="stylesheet" type="text/css" href="07-styles/07-styles.css">
-<header>
+
 
     <nav>
     <!-- <a href="Lesson05-assignment.html" target="Lesson05-assignment.html">About   /</a>*-->
@@ -18,28 +17,25 @@
       <a href="instructors.html" target="instructors.html">INSTRUCTORS   /</a>
       <a href="email-us.html" target="email-us.html">EMAIL US   /</a>
     </nav>
-  </head>
-
-<body>
 
 
-  <h1> </h1>
+
+  <h1>About our organization: </h1>
   <section>
+    <h2> Archery is</h2>
     <p>
-        <ol>About our organization:
-          <ul>Straight to the Point Archery is a non profit archery education center and indoor training facility founded in 2005 by Giap Nguyen.
-          </ul>
-          <ul>Our state of the art educational and training facility incorporates detailed technical video analysis combined with generations of archery experience from certified coaches and instructors.Straight to the Point Archery has instructors that are qualified level 1 and level 2 instructors and have met the safety requirements of the USA Archery (USAA). We teach in a positive learning environment.  Our instructors also have extensive knowledge of the most advanced archery equipment and all forms of archery from the traditional long bow to the modern compound.  Straight to the Point Archery also has specific instructors for recreational archery, competitive archery and bow hunting.Straight to the Point Archery’s staff has decades of experience in the archery industry. We are committed to educating you with any questions that you may have.          </ul>
-          <ul>Straight to the Point Archery is an indoor training facility with  28 shooting (14 -  10 yard lanes and 14 – 20 yard lanes) and 2 private coaching rooms. We also have access to 26  additional  20 yard lanes  and an outdoor shooting field.  We offer several types of lessons to accommodate everyone from the first time archer to the professional archer. Once set up with proper fitting equipment, each archer will be given the basic safety instruction to start and will be introduced to various shooting techniques.
-          </ul>
-        </ol>
-        <p> ACCREDITATIONS
-          <ol>Straight to the Point Archery has an excellent network of contacts with the USA Archery (USAA), Washington State Archery Association (WSAA), Washington State Bow Hunters (WSB), National Field Archery Association (NFAA) and many more national and state archery associations. These partnerships allow you to feel confident in our facility and staff.
-</ol>
+        Straight to the Point Archery is a non profit archery education center and indoor training facility founded in 2005 by Giap Nguyen.
+        Our state of the art educational and training facility incorporates detailed technical video analysis combined with generations of archery experience from certified coaches and instructors.Straight to the Point Archery has instructors that are qualified level 1 and level 2 instructors and have met the safety requirements of the USA Archery (USAA). We teach in a positive learning environment.  Our instructors also have extensive knowledge of the most advanced archery equipment and all forms of archery from the traditional long bow to the modern compound.  Straight to the Point Archery also has specific instructors for recreational archery, competitive archery and bow hunting.Straight to the Point Archery’s staff has decades of experience in the archery industry. We are committed to educating you with any questions that you may have.
+        Straight to the Point Archery is an indoor training facility with  28 shooting (14 -  10 yard lanes and 14 – 20 yard lanes) and 2 private coaching rooms. We also have access to 26  additional  20 yard lanes  and an outdoor shooting field.  We offer several types of lessons to accommodate everyone from the first time archer to the professional archer. Once set up with proper fitting equipment, each archer will be given the basic safety instruction to start and will be introduced to various shooting techniques.
+    </section>
 
-<p>Straight to the Point Archery is an  with  28 shooting (14 -  10 yard lanes and 14 – 20 yard lanes) and 2 private coaching rooms. We also have access to 26  additional  20 yard lanes  and an outdoor shooting field.  We offer several types of lessons to accommodate everyone from the first time archer to the professional archer. Once set up with proper fitting equipment, each archer will be given the basic safety instruction to start and will be introduced to various shooting techniques.
-
-From Beginner to Elite, archers of all ages and ability learn about this exciting Olympic and international sport. Sign up for a group lesson, private class, schedule a birthday or corporate party or compete at one of our many tournaments.  Straight to the Point Archery also offers homeschooling programs, kids club events, YMCA classes, Boy and Girl Scouts achievement programs and several other youth group activities. We are dedicated to teaching valuable life skills to the youth in our community through the wonderful discipline of archery.
+    <h1> ACCREDITATIONS</h1>
+    <section>
+         <h2> Network Contacts</h2>
+          <p>Straight to the Point Archery has an excellent network of contacts with the USA Archery (USAA), Washington State Archery Association (WSAA), Washington State Bow Hunters (WSB), National Field Archery Association (NFAA) and many more national and state archery associations. These partnerships allow you to feel confident in our facility and staff.Straight to the Point Archery is an  with  28 shooting (14 -  10 yard lanes and 14 – 20 yard lanes) and 2 private coaching rooms. We also have access to 26  additional  20 yard lanes  and an outdoor shooting field.  We offer several types of lessons to accommodate everyone from the first time archer to the professional archer. Once set up with proper fitting equipment, each archer will be given the basic safety instruction to start and will be introduced to various shooting techniques.
+          From Beginner to Elite, archers of all ages and ability learn about this exciting Olympic and international sport. Sign up for a group lesson, private class, schedule a birthday or corporate party or compete at one of our many tournaments.  Straight to the Point Archery also offers homeschooling programs, kids club events, YMCA classes, Boy and Girl Scouts achievement programs and several other youth group activities. We are dedicated to teaching valuable life skills to the youth in our community through the wonderful discipline of archery.
+          </p>
+    </section>
 
 
 
@@ -49,10 +45,9 @@ From Beginner to Elite, archers of all ages and ability learn about this excitin
 
 
 
-</p>
 
-  <h2></h2>
-  <h3></h3>
+  <h2>header 2</h2>
+  <h3>header 3</h3>
 
 
 
@@ -65,7 +60,7 @@ From Beginner to Elite, archers of all ages and ability learn about this excitin
   </footer>
 
 
-</body>
+
 
 
 
