--- a/lesson07/instructors.html
+++ b/lesson07/instructors.html
@@ -15,38 +15,46 @@
       </nav>
 
 
-     <body>
-<link rel="stylesheet" type="text/css" href="STYLES/no5-Styles-mock.css">
-<style>
-  .box{
-    height: 250px;
-    width:450px;
-    border:rgb(68,68,68);
-    /*
-    background: lightgrey;*/
-    background: rgb(236,183,34);
-    padding: 25px;
-    margin: 10px
-  }
-  .container{
-    display: flex;
-    height:350px;
-    background-color:rgb(236,183,34);
-    flex-direction:row;
-    flex-wrap:nowrap;
-    justify-content:space-evenly;
-    margin-bottom: 25px
 
-    align-items: center;
+     <link rel="stylesheet" type="text/css" href="STYLES/no5-Styles-mock.css">
+     <style>
+      .box{
+      height: 250px;
+      width:450px;
+      border:rgb(68,68,68);
+      /*
+      background: lightgrey;*/
+      background: rgb(236,183,34);
+      padding: 25px;
+      margin: 10px
+      }
 
-  }
+      .container{
+        display: flex;
+        height:350px;
+        background-color:rgb(236,183,34);
+        flex-direction:row;
+        flex-wrap:nowrap;
+        justify-content:space-evenly;
+        margin-bottom: 25px
+        align-items: center;
+      }
 /* try this section hover*/
-section:hover {
-  border: 3px solid gray;
-  background-color:rgb(236,183,34);
+      section:hover {
+        border: 3px solid gray;
+        background-color:rgb(236,183,34);
+        }
+
+/* try this section hover*/
+
+/*margin for paragraph*/
+p {
+  margin-top: 50px;
+  margin-bottom: 10x;
+  margin-right: 10px;
+  margin-left: 10px;
+  align-items: center;
 }
-
-/* try this section hover*/
 
 
 
@@ -54,21 +62,24 @@ section:hover {
 
 
   </style>
+
 <body>
 
 <section class="container">
-
   <br>
 
   <div class="box">
     <h1>Derek Jenkins</h1>
-    <img src="07-images/instructor-bio-image1.png"  alt="Instructor1 " class="center">
+    <img src="07-images/instructor-bio-image1.png"  alt="Instructor1 " class="center" >
     <section>
-      <p> Certification: Level 3 Coach</p>
-      <p> Coaching Bow Styles: RECURVE</p>
-      <p> "My biggest goal is to see archery grow and help its participants to grow with it."
+      <p> Certification: Level 3 Coach Coaching Bow Styles: RECURVE</p>
+      <quote> "My biggest goal is to see archery grow and help its participants to grow with it."</quote>
 
-      <p>Derek is a Washington native and an experienced outdoorsman with many years hunting, fishing, skiing, canoeing, archery, shooting and minimalistic camping. His skillful mastery of bushcraft and wilderness survival knowledge helps define his character. He enjoys handcrafting his own long bows, flint knapped primitive arrows and making custom leather products.
+      <p>Derek is a Washington native and an experienced outdoorsman with many years hunting,
+         fishing, skiing, canoeing, archery, shooting and minimalistic camping. His skillful
+         mastery of bushcraft and wilderness survival knowledge helps define his character.
+         He enjoys handcrafting his own long bows, flint knapped primitive arrows and making
+          custom leather products.
         </p>
     </section>
 
@@ -78,9 +89,12 @@ section:hover {
       <h1>Amy Smith </h1>
       <img src="07-images/instructor-bio-image2.png"  alt="Instructor2 " class="center">
         <section>
-      <p> Certification: Level 3 Coach</p>
-      <p> Coaching Bow Styles: RECURVE</p>
-      <p> Amy truly has a passion for archery. She comes from a long line of hunters, fisherman, and trappers of Canada. Amy  places a strong emphasis on safety and is enthusiastic about teaching. Amy also loves fitness, and  has been a YMCA group exercise and personal trainer for over 18 years.
+      <p> Certification: Level 3 Coach Coaching Bow Styles: RECURVE</p>
+      <p> Amy truly has a passion for archery. She comes from a long line of
+         hunters, fisherman, and trappers of Canada. Amy  places a strong
+         emphasis on safety and is enthusiastic about teaching. Amy also loves
+        fitness, and  has been a YMCA group exercise and personal trainer for
+        over 18 years.
         <p>
   </section>
   </div>
@@ -89,11 +103,13 @@ section:hover {
       <h1>Nathan Lee </h1>
       <img src="07-images/instructor-bio-image3.png"  alt="Instructor3 " class="center">
       <section>
-      <p> Certification: Level 3 Coach</p>
-      <p> Coaching Bow Styles: RECURVE</p>
-      <p> <p> Certification: Level 3 Coach</p>
-      <p> Coaching Bow Styles: RECURVE</p>
-      <p> Nathan is an USA Archery Certified Level 3 NTS – Coach and has been teaching archery since 2009. He has been interested in archery since he nocked his first arrow while a Boy Scout at Scout camp. Nathan has many years of experience teaching people of all ages, experience gained as a Martial Arts Instructor and Studio Manager.
+      <p> Certification: Level 3 Coach Coaching Bow Styles: RECURVE</p>
+
+      <p> Nathan is an USA Archery Certified Level 3 NTS – Coach and has been
+         teaching archery since 2009. He has been interested in archery since
+          he nocked his first arrow while a Boy Scout at Scout camp. Nathan has
+           many years of experience teaching people of all ages, experience
+            gained as a Martial Arts Instructor and Studio Manager.
       </p>
     </section>
   </div>
@@ -103,15 +119,17 @@ section:hover {
 
     <img src="07-images/instructor-bio-image4.png"  alt="Instructor4 " class="center">
   <section>
-    <p> Certification: Level 3 Coach</p>
-    <p> Coaching Bow Styles: RECURVE</p>
-    <p> <p> Certification: Level 3 Coach</p>
-    <p> Coaching Bow Styles: RECURVE</p>
+    <p> Certification: Level 3 Coach> Coaching Bow Styles: RECURVE</p>
 
-    <p> Nathan is an USA Archery Certified Level 3 NTS – Coach and has been teaching archery since 2009. He has been interested in archery since he nocked his first arrow while a Boy Scout at Scout camp. Nathan has many years of experience teaching people of all ages, experience gained as a Martial Arts Instructor and Studio Manager.
-</section>
+    <p> Nathan is an USA Archery Certified Level 3 NTS – Coach and has been
+       teaching archery since 2009. He has been interested in archery since
+        he nocked his first arrow while a Boy Scout at Scout camp. Nathan
+        has many years of experience teaching people of all ages, experience
+         gained as a Martial Arts Instructor and Studio Manager.
     </p>
-    </p>
+ </section>
+
+
 
 
 
