update  and run in calidator html/css error-free

--- a/lesson07/email-us.html
+++ b/lesson07/email-us.html
@@ -16,9 +16,9 @@
     <a href="instructors.html" target="instructors.html">INSTRUCTORS   /</a>
     <a href="email-us.html" target="email-us.html">EMAIL US   /</a>
     </nav>
-  </head>
+  </header>
 
-  <body>
+
     <form class="w3-container w3-card-4 w3-light-grey">
       <h2>Bordered Input</h2>
       <p>Add the w3-border class to create bordered inputs.</p>
@@ -52,14 +52,15 @@
       <p>
       <input class="w3-radio" type="radio" name="A103" value="A103" >
       <label>Advance Archery </label></p>
-
+      <p>
       <input class="w3-radio" type="radio" name="Private lessons" value="Private lessons" >
       <label>Private lessons </label></p>
+      <p>
       <input class="w3-radio" type="radio" name="Special Events" value="Special Events" >
       <label>Special Events </label></p>
     </form>
 
 
 
-    </body>
+
     </html>
