update and run in validator error-free

--- a/lesson07/instructors.html
+++ b/lesson07/instructors.html
@@ -13,82 +13,40 @@
       <a href="instructors.html" target="instructors.html">INSTRUCTORS   /</a>
       <a href="email-us.html" target="email-us.html">EMAIL US   /</a>
       </nav>
-
-
-
-     <link rel="stylesheet" type="text/css" href="STYLES/no5-Styles-mock.css">
-     <style>
-      .box{
-      height: 250px;
-      width:450px;
-      border:rgb(68,68,68);
-      /*
-      background: lightgrey;*/
-      background: rgb(236,183,34);
-      padding: 25px;
-      margin: 10px
-      }
-
-      .container{
-        display: flex;
-        height:350px;
-        background-color:rgb(236,183,34);
-        flex-direction:row;
-        flex-wrap:nowrap;
-        justify-content:space-evenly;
-        margin-bottom: 25px
-        align-items: center;
-      }
-/* try this section hover*/
-      section:hover {
-        border: 3px solid gray;
-        background-color:rgb(236,183,34);
-        }
-
-/* try this section hover*/
-
-/*margin for paragraph*/
-p {
-  margin-top: 50px;
-  margin-bottom: 10x;
-  margin-right: 10px;
-  margin-left: 10px;
-  align-items: center;
-}
+     <link rel="stylesheet" type="text/css" href="07-styles.css">
 
 
 
 
-
-
-  </style>
-
-<body>
 
 <section class="container">
   <br>
 
   <div class="box">
-    <h1>Derek Jenkins</h1>
-    <img src="07-images/instructor-bio-image1.png"  alt="Instructor1 " class="center" >
+        <img src="07-images/instructor-bio-image1.png"  alt="Instructor1 " class="center" >
+        <h1>Derek Jenkins</h1>
     <section>
-      <p> Certification: Level 3 Coach Coaching Bow Styles: RECURVE</p>
-      <quote> "My biggest goal is to see archery grow and help its participants to grow with it."</quote>
+      <h4>Level 3 Coach</h4>
+      <p>   Coaching Bow Styles: RECURVE</p>
+      <blockquote> "My biggest goal is to see archery grow and help its participants to grow with it."</blockquote>
 
       <p>Derek is a Washington native and an experienced outdoorsman with many years hunting,
          fishing, skiing, canoeing, archery, shooting and minimalistic camping. His skillful
          mastery of bushcraft and wilderness survival knowledge helps define his character.
          He enjoys handcrafting his own long bows, flint knapped primitive arrows and making
           custom leather products.
-        </p>
+</p>
+
     </section>
 
   </div>
 
   <div class="box">
-      <h1>Amy Smith </h1>
+
       <img src="07-images/instructor-bio-image2.png"  alt="Instructor2 " class="center">
+      <h1>Amy Smith </h1>
         <section>
+          <h2>yyy</h2>
       <p> Certification: Level 3 Coach Coaching Bow Styles: RECURVE</p>
       <p> Amy truly has a passion for archery. She comes from a long line of
          hunters, fisherman, and trappers of Canada. Amy  places a strong
@@ -96,13 +54,15 @@ p {
         fitness, and  has been a YMCA group exercise and personal trainer for
         over 18 years.
         <p>
-  </section>
+          </section>
   </div>
 
   <div class="box">
-      <h1>Nathan Lee </h1>
+
       <img src="07-images/instructor-bio-image3.png"  alt="Instructor3 " class="center">
+      <h1>Nathan Lee </h1>
       <section>
+        <h2> yyy</h2>
       <p> Certification: Level 3 Coach Coaching Bow Styles: RECURVE</p>
 
       <p> Nathan is an USA Archery Certified Level 3 NTS – Coach and has been
@@ -115,10 +75,11 @@ p {
   </div>
 
   <div class="box">
-      <h1>Giap Nguyen-Founder</h1>
 
     <img src="07-images/instructor-bio-image4.png"  alt="Instructor4 " class="center">
+<h1>Giap Nguyen-Founder</h1>
   <section>
+    <h2>yyyyy </h2>
     <p> Certification: Level 3 Coach> Coaching Bow Styles: RECURVE</p>
 
     <p> Nathan is an USA Archery Certified Level 3 NTS – Coach and has been
@@ -141,11 +102,5 @@ p {
 
 
 
-</body>
-</html>
 
-
-     </body>
-       <footer>
-         </footer>
 </html>
