--- a/lesson08/index.html
+++ b/lesson08/index.html
@@ -2,61 +2,163 @@
 <html lang="en">
   <head>
      <meta charset="utf-8">
-
      <title>Archery-Academy.HTML</title>
      <img src="images/archeryAcademy-logo-color.png"  alt="Archery Academy logo " class="center">
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
+
+
+
+
+
+  </head>
 
     <nav>
-    <!-- <a href="Lesson05-assignment.html" target="Lesson05-assignment.html">About   /</a>*-->
       <a href="index.html" target="index.html">ABOUT US  /</a>
-
       <a href="class-sched.html" target="class-sched">CLASSES & SPECIAL EVENTS  /</a>
-
       <a href="instructors.html" target="instructors.html">INSTRUCTORS   /</a>
       <a href="email-us.html" target="email-us.html">EMAIL US   /</a>
     </nav>
 
 
+<style>
+.grid-container {
+  display: grid;
+  grid: 100px / auto auto auto;
+  grid-gap: 10px;
+  background-color: #2196F3;
+  padding: 10px;
+  padding-top:35px
+}
 
-  <h1>About our organization: </h1>
-  <section>
-    <h2> Archery is</h2>
-    <p>
-        Straight to the Point Archery is a non profit archery education center and indoor training facility founded in 2005 by Giap Nguyen.
-        Our state of the art educational and training facility incorporates detailed technical video analysis combined with generations of archery experience from certified coaches and instructors.Straight to the Point Archery has instructors that are qualified level 1 and level 2 instructors and have met the safety requirements of the USA Archery (USAA). We teach in a positive learning environment.  Our instructors also have extensive knowledge of the most advanced archery equipment and all forms of archery from the traditional long bow to the modern compound.  Straight to the Point Archery also has specific instructors for recreational archery, competitive archery and bow hunting.Straight to the Point Archery’s staff has decades of experience in the archery industry. We are committed to educating you with any questions that you may have.
-        Straight to the Point Archery is an indoor training facility with  28 shooting (14 -  10 yard lanes and 14 – 20 yard lanes) and 2 private coaching rooms. We also have access to 26  additional  20 yard lanes  and an outdoor shooting field.  We offer several types of lessons to accommodate everyone from the first time archer to the professional archer. Once set up with proper fitting equipment, each archer will be given the basic safety instruction to start and will be introduced to various shooting techniques.
-    </section>
+.grid-container > div {
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
+  grid-row-gap:10px;
+}
+.span_3_of_12 {
+  width: 25%;
+}
 
-    <h1> ACCREDITATIONS</h1>
-    <section>
-         <h2> Network Contacts</h2>
-          <p>Straight to the Point Archery has an excellent network of contacts with the USA Archery (USAA), Washington State Archery Association (WSAA), Washington State Bow Hunters (WSB), National Field Archery Association (NFAA) and many more national and state archery associations. These partnerships allow you to feel confident in our facility and staff.Straight to the Point Archery is an  with  28 shooting (14 -  10 yard lanes and 14 – 20 yard lanes) and 2 private coaching rooms. We also have access to 26  additional  20 yard lanes  and an outdoor shooting field.  We offer several types of lessons to accommodate everyone from the first time archer to the professional archer. Once set up with proper fitting equipment, each archer will be given the basic safety instruction to start and will be introduced to various shooting techniques.
-          From Beginner to Elite, archers of all ages and ability learn about this exciting Olympic and international sport. Sign up for a group lesson, private class, schedule a birthday or corporate party or compete at one of our many tournaments.  Straight to the Point Archery also offers homeschooling programs, kids club events, YMCA classes, Boy and Girl Scouts achievement programs and several other youth group activities. We are dedicated to teaching valuable life skills to the youth in our community through the wonderful discipline of archery.
+.span_8_of_12 {
+  width: 66.66%;
+  background-color: gray:
+}
+
+
+* {
+    box-sizing: border-box;
+}
+
+.col {
+    float: left;
+    padding: 15px;
+    border: 5px solid red;
+
+}
+
+
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+/*grid */
+.grid-container {
+  display: grid;
+  grid: 50px / auto auto auto;
+  grid-gap: 10px;
+  background-color: #2196F3;
+  padding: 50px;
+}
+
+.grid-container > div {
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  padding: 50px 0;
+  font-size: 30px;
+  margin-top: 50px;
+}
+/*grid*/
+
+.responsive {
+  width:100%;
+  height:auto;
+}
+
+
+
+</style>
+<body>
+
+  <div class="w3-container w3-center w3-animate-bottom">
+    <h1>Come and learn ARCHERY! </h1>
+    <p>Straight to the Point Archery is a non profit archery education center and indoor training facility.</p>
+  </div>
+
+
+<!--insert grid-->
+
+    <div class="grid-container">
+
+        <Strong>ABOUT US: </strong>Our facility has  28 shooting (14 -  10 yard lanes and 14 – 20 yard lanes) and 2 private coaching rooms founded in 2005 by Giap Nguyen. State of the art educational and training facility with detailed technical video analysis.
+      We offer several types of lessons to accommodate everyone from the first time archer to the professional archer.
+
+    </div>
+
+<div class="grid">
+<div class="row">
+    <div class="col span_3_of_12">
+    <strong> ACCREDITATIONS</Strong>
+          <p>
+            <ol> USA Archery (USAA)</ol>
+            <ol> Washington State Archery Association (WSAA)</ol>
+            <ol> Washington State Bow Hunters (WSB)</ol>
+            <ol> National Field Archery Association (NFAA)</ol>
           </p>
-    </section>
+
+      </div>
+</div>
+</div>
 
 
 
 
+  <div class="grid">
+<div class="row">
+
+      <div class="col span_8_of_12">
+
+<ol>
+
+  <ul>Classes for  first time archer to the professional archer.</ul>
+  <ul>Offers group lesson, private class, schedule a birthday or corporate party or compete at one of our many tournaments.</ul>
+  <h6>
+  <ul>Straight to the Point Archery also offers homeschooling programs,
+     kids club events, YMCA classes, Boy and Girl Scouts achievement programs and several
+      other youth group activities. We are dedicated to teaching valuable life skills to
+      the youth in our community through the wonderful discipline of archery.<ul></h6>
+  </ol>
+
+</div>
+</div>
+</div>
 
 
+</body>
 
-
-
-
-  <h2>header 2</h2>
-  <h3>header 3</h3>
-
-
-
-
-  <footer class="flip">
-  <img src="images/footerimage.jpg"  alt="footer"  class="center">
+  <footer>
+  <img src="images/footerimage.jpg"    alt="footer"  class="responsive" >
+<small>
   <p>Nondiscriminatory Policy:
   Next Step Archery admits students of any race, gender presentation, sexuality, religion, national origin or ethnic origin to all rights, privileges, programs and activities available to students at the school. We do not discriminate in administration of our educational policies, admission policies and other school administered programs. All students are welcome and valuable members of our community.
 </p>
+</small>
   </footer>
 
 
