--- a/lesson08/instructors.html
+++ b/lesson08/instructors.html
@@ -28,8 +28,9 @@
     <section>
       <h4>Level 3 Coach</h4>
       <p>   Coaching Bow Styles: RECURVE</p>
+      <h5>
       <blockquote> "My biggest goal is to see archery grow and help its participants to grow with it."</blockquote>
-
+    </h5>
       <p>Derek is a Washington native and an experienced outdoorsman with many years hunting,
          fishing, skiing, canoeing, archery, shooting and minimalistic camping. His skillful
          mastery of bushcraft and wilderness survival knowledge helps define his character.
@@ -46,11 +47,13 @@
       <img src="images/instructor-bio-image2.png"  alt="Instructor2 " class="center">
       <h1>Amy Smith </h1>
         <section>
-          <h2>yyy</h2>
-      <p> Certification: Level 3 Coach Coaching Bow Styles: RECURVE</p>
+          <h4>Level 2 Coach</h4>
+      <p> Coaching Bow Styles: RECURVE</p>
+      <h5>
+      <blockquote> " I love teaching archery! I  place a strong
+      emphasis on safety during training."</blockquote></h5>
       <p> Amy truly has a passion for archery. She comes from a long line of
-         hunters, fisherman, and trappers of Canada. Amy  places a strong
-         emphasis on safety and is enthusiastic about teaching. Amy also loves
+         hunters, fisherman, and trappers of Canada.  Amy also loves
         fitness, and  has been a YMCA group exercise and personal trainer for
         over 18 years.
         <p>
@@ -62,13 +65,13 @@
       <img src="images/instructor-bio-image3.png"  alt="Instructor3 " class="center">
       <h1>Nathan Lee </h1>
       <section>
-        <h2> yyy</h2>
-      <p> Certification: Level 3 Coach Coaching Bow Styles: RECURVE</p>
+        <h4>Level 3 Coach</h4>
+      <p>Coaching Bow Styles: RECURVE</p>
+      <h5>
+      <blockquote> "I've been interested in archery since
+       I nocked my first arrow while I was a Boy Scout at Scout camp."</blockquote></h5>
 
-      <p> Nathan is an USA Archery Certified Level 3 NTS – Coach and has been
-         teaching archery since 2009. He has been interested in archery since
-          he nocked his first arrow while a Boy Scout at Scout camp. Nathan has
-           many years of experience teaching people of all ages, experience
+      <p>   Nathan has many years of experience teaching people of all ages, experience
             gained as a Martial Arts Instructor and Studio Manager.
       </p>
     </section>
@@ -77,16 +80,14 @@
   <div class="box">
 
     <img src="images/instructor-bio-image4.png"  alt="Instructor4 " class="center">
-<h1>Giap Nguyen-Founder</h1>
+<h1>Giap Nguyen</h1>
   <section>
-    <h2>yyyyy </h2>
-    <p> Certification: Level 3 Coach> Coaching Bow Styles: RECURVE</p>
-
-    <p> Nathan is an USA Archery Certified Level 3 NTS – Coach and has been
-       teaching archery since 2009. He has been interested in archery since
-        he nocked his first arrow while a Boy Scout at Scout camp. Nathan
-        has many years of experience teaching people of all ages, experience
-         gained as a Martial Arts Instructor and Studio Manager.
+    <h4>Founder/Level 3 Coach </h4>
+    <p> Coaching Bow Styles: RECURVE</p>
+    <h5><blockquote> "I want to train all people of ages the joy of archery."</blockquote></h5>
+    <p>  Giap founded the Archery Academy in 2009 to initially cater to young children around the neigborhood but
+      found teaching people of all ages, a greater experience. He is also
+         a Martial Arts Instructor and Studio Manager.
     </p>
  </section>
 
