updaye sched file

--- a/lesson08/class-sched.html
+++ b/lesson08/class-sched.html
@@ -11,7 +11,7 @@
     <nav>
     <!-- <a href="Lesson05-assignment.html" target="Lesson05-assignment.html">About   /</a>*-->
       <a href="index.html" target="index.html">ABOUT US  /</a>
-      <a href="class-sched.html" target="_blank"> CLASSES & SPECIAL EVENTS  /</a>
+      <a href="class-sched.html" target="class-sched.html"> CLASSES & SPECIAL EVENTS  /</a>
 
       <a href="instructors.html" target="instructors.html">INSTRUCTORS   /</a>
       <a href="email-us.html" target="email-us.html">EMAIL US   /</a>
