update email file

--- a/lesson08/email-us.html
+++ b/lesson08/email-us.html
@@ -4,7 +4,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1">
      <title>title</title>
      <img src="images/archeryAcademy-logo-color.png"  alt="Archery Academy logo " class="center">
-    <link rel="stylesheet" type="text/css" href="styles/styles.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <header>
 
     <nav>
@@ -20,8 +20,7 @@
 
 
     <form class="w3-container w3-card-4 w3-light-grey">
-      <h2>Bordered Input</h2>
-      <p>Add the w3-border class to create bordered inputs.</p>
+      <h2>EMAIL INQUIRY</h2>
 
       <p><label>First Name</label>
       <input class="w3-input w3-border" name="first" type="text"></p>
@@ -34,31 +33,12 @@
 
       <p><label>Subject</label>
       <input class="w3-input w3-border" name="last" type="text"></p>
+      <input type="submit" value="submit">
+      
 
     </form>
 
 
-
-
-
-    <form class="w3-container w3-card-4">
-      <h2>Interested in:</h2>
-      <p>
-      <input class="w3-radio" type="radio" name="A101" value="A101" checked>
-      <label> Beginner Archery</label></p>
-      <p>
-      <input class="w3-radio" type="radio" name="A102" value="A102">
-      <label>Intermediate Archery</label></p>
-      <p>
-      <input class="w3-radio" type="radio" name="A103" value="A103" >
-      <label>Advance Archery </label></p>
-      <p>
-      <input class="w3-radio" type="radio" name="Private lessons" value="Private lessons" >
-      <label>Private lessons </label></p>
-      <p>
-      <input class="w3-radio" type="radio" name="Special Events" value="Special Events" >
-      <label>Special Events </label></p>
-    </form>
 
 
 
