--- a/lesson08/index.html
+++ b/lesson08/index.html
@@ -3,10 +3,13 @@
   <head>
      <meta charset="utf-8">
      <title>Archery-Academy.HTML</title>
-     <img src="images/archeryAcademy-logo-color.png"  alt="Archery Academy logo " class="center">
-    <link rel="stylesheet" type="text/css" href="styles/styles.css">
+     </head>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+     <img src="images/archeryAcademy-logo-color.png"  alt="Archery Academy logo " class="center">
+    <link rel="stylesheet" type="text/css" href="styles.css">
+
+
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
 
@@ -14,7 +17,7 @@
 
 
 
-  </head>
+
 
     <nav>
       <a href="index.html" target="index.html">ABOUT US  /</a>
@@ -22,35 +25,7 @@
       <a href="instructors.html" target="instructors.html">INSTRUCTORS   /</a>
       <a href="email-us.html" target="email-us.html">EMAIL US   /</a>
     </nav>
-
-
-<style>
-.grid-container {
-  display: grid;
-  grid: 100px / auto auto auto;
-  grid-gap: 10px;
-  background-color: #2196F3;
-  padding: 10px;
-  padding-top:35px
-}
-
-.grid-container > div {
-  background-color: rgba(255, 255, 255, 0.8);
-  text-align: center;
-  padding: 20px 0;
-  font-size: 30px;
-  grid-row-gap:10px;
-}
-.span_3_of_12 {
-  width: 25%;
-}
-
-.span_8_of_12 {
-  width: 66.66%;
-  background-color: gray:
-}
-
-
+<!--
 * {
     box-sizing: border-box;
 }
@@ -91,10 +66,18 @@
   height:auto;
 }
 
+-->
 
 
-</style>
-<body>
+
+<video id="movie1" width="150" height="150" controls >
+  <source src="IMG_3501.mov"/>
+<track src="subtitles=en.vtt" kind="captions" label="caption" srclang="en" default/>
+your browser does not support HTMLS
+</video>
+
+
+
 
   <div class="w3-container w3-center w3-animate-bottom">
     <h1>Come and learn ARCHERY! </h1>
@@ -114,14 +97,14 @@
 <div class="grid">
 <div class="row">
     <div class="col span_3_of_12">
-    <strong> ACCREDITATIONS</Strong>
-          <p>
-            <ol> USA Archery (USAA)</ol>
-            <ol> Washington State Archery Association (WSAA)</ol>
-            <ol> Washington State Bow Hunters (WSB)</ol>
-            <ol> National Field Archery Association (NFAA)</ol>
-          </p>
 
+          <section>
+            <h4>  <strong> ACCREDITATIONS</Strong></h4>
+              USA Archery (USAA)<br>
+             Washington State Archery Association (WSAA)<br>
+             Washington State Bow Hunters (WSB)<br>
+             National Field Archery Association (NFAA)
+        </section>
       </div>
 </div>
 </div>
@@ -130,34 +113,32 @@
 
 
   <div class="grid">
-<div class="row">
-
+  <div class="row">
       <div class="col span_8_of_12">
 
-<ol>
-
-  <ul>Classes for  first time archer to the professional archer.</ul>
-  <ul>Offers group lesson, private class, schedule a birthday or corporate party or compete at one of our many tournaments.</ul>
-  <h6>
-  <ul>Straight to the Point Archery also offers homeschooling programs,
-     kids club events, YMCA classes, Boy and Girl Scouts achievement programs and several
-      other youth group activities. We are dedicated to teaching valuable life skills to
-      the youth in our community through the wonderful discipline of archery.<ul></h6>
-  </ol>
+      <section>
+        <h2>  Classes</h2>
+      Classes for  first time archer to the professional archer.
+      Offers group lesson, private class, schedule a birthday or corporate party or compete at one of our many tournaments.
+  Straight to the Point Archery also offers homeschooling programs,
+  kids club events, YMCA classes, Boy and Girl Scouts achievement programs and several
+  other youth group activities. We are dedicated to teaching valuable life skills to
+  the youth in our community through the wonderful discipline of archery.
+</section>
 
 </div>
 </div>
 </div>
 
 
-</body>
+
 
   <footer>
   <img src="images/footerimage.jpg"    alt="footer"  class="responsive" >
 <small>
-  <p>Nondiscriminatory Policy:
+  Nondiscriminatory Policy:
   Next Step Archery admits students of any race, gender presentation, sexuality, religion, national origin or ethnic origin to all rights, privileges, programs and activities available to students at the school. We do not discriminate in administration of our educational policies, admission policies and other school administered programs. All students are welcome and valuable members of our community.
-</p>
+
 </small>
   </footer>
 
