--- a/lesson08/instructors.html
+++ b/lesson08/instructors.html
@@ -28,9 +28,9 @@
     <section>
       <h4>Level 3 Coach</h4>
       <p>   Coaching Bow Styles: RECURVE</p>
-      <h5>
+
       <blockquote> "My biggest goal is to see archery grow and help its participants to grow with it."</blockquote>
-    </h5>
+
       <p>Derek is a Washington native and an experienced outdoorsman with many years hunting,
          fishing, skiing, canoeing, archery, shooting and minimalistic camping. His skillful
          mastery of bushcraft and wilderness survival knowledge helps define his character.
@@ -49,9 +49,9 @@
         <section>
           <h4>Level 2 Coach</h4>
       <p> Coaching Bow Styles: RECURVE</p>
-      <h5>
+
       <blockquote> " I love teaching archery! I  place a strong
-      emphasis on safety during training."</blockquote></h5>
+      emphasis on safety during training."</blockquote>
       <p> Amy truly has a passion for archery. She comes from a long line of
          hunters, fisherman, and trappers of Canada.  Amy also loves
         fitness, and  has been a YMCA group exercise and personal trainer for
@@ -67,9 +67,9 @@
       <section>
         <h4>Level 3 Coach</h4>
       <p>Coaching Bow Styles: RECURVE</p>
-      <h5>
+
       <blockquote> "I've been interested in archery since
-       I nocked my first arrow while I was a Boy Scout at Scout camp."</blockquote></h5>
+       I nocked my first arrow while I was a Boy Scout at Scout camp."</blockquote>
 
       <p>   Nathan has many years of experience teaching people of all ages, experience
             gained as a Martial Arts Instructor and Studio Manager.
@@ -84,7 +84,7 @@
   <section>
     <h4>Founder/Level 3 Coach </h4>
     <p> Coaching Bow Styles: RECURVE</p>
-    <h5><blockquote> "I want to train all people of ages the joy of archery."</blockquote></h5>
+    <blockquote> "I want to train all people of ages the joy of archery."</blockquote>
     <p>  Giap founded the Archery Academy in 2009 to initially cater to young children around the neigborhood but
       found teaching people of all ages, a greater experience. He is also
          a Martial Arts Instructor and Studio Manager.
