update index file with sample video

--- a/lesson08/index.html
+++ b/lesson08/index.html
@@ -70,11 +70,23 @@
 
 
 
-<video id="movie1" width="150" height="150" controls >
-  <source src="IMG_3501.mov"/>
-<track src="subtitles=en.vtt" kind="captions" label="caption" srclang="en" default/>
-your browser does not support HTMLS
+
+
+<video width="150" height="150" controls autoplay  >
+  <source src="SampleVideo_1280x720_1mb.mp4" type="video/mp4">
+  <source src="SampleVideo_1280x720_1mb.ogv" type="video/ogg">
+  Your browser does not support the video tag.
 </video>
+
+
+
+
+
+
+
+
+
+
 
 
 
