--- a/lesson09-web-forms/index.html
+++ b/lesson09-web-forms/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1> Pet Adoption Applicatons</h1>
 
-    <form methos="GET">
+    <form method="GET">
         <label>Your name:
          <input type="text" name="applicantName"
        </label>
