--- a/lesson09-web-forms/index.html
+++ b/lesson09-web-forms/index.html
@@ -9,9 +9,27 @@
 
     <form method="GET">
         <label>Your name:
-         <input type="text" name="applicantName"
+         <input type="text" name="applicantName">
        </label>
-      <input type="submit">
-    <form>
+
+       <label> Your email:
+           <input type="email" name="applicantEmail">
+       </label>
+
+        <!--other label syntax-->
+        <label for ="city"> What city are you in?</label>
+            <input  id="city" type="text"   name="applicantCity">
+
+         <label>How many pets are in your home?
+           <input type="number" name="petCount">
+        </label>
+
+        <label> To create account, enter a password
+          <input type="password" name="accountPW">
+        </label>
+
+      <input type="submit" value="Apply Now!">
+    </form>
+
 </body>
 </html>
