--- a/lesson08/email-us.html
+++ b/lesson08/email-us.html
@@ -34,7 +34,35 @@
       <p><label>Subject</label>
       <input class="w3-input w3-border" name="last" type="text"></p>
       <input type="submit" value="submit">
-      
+      <h1> Pet Adoption Applicatons</h1>
+
+      <form method="GET">
+          <label>Your name:
+           <input type="text" name="applicantName">
+         </label>
+
+         <label> Your email:
+             <input type="email" name="applicantEmail">
+         </label>
+
+          <!--other label syntax-->
+          <label for ="city"> What city are you in?</label>
+              <input  id="city" type="text"   name="applicantCity">
+
+           <label>How many pets are in your home?
+             <input type="number" name="petCount">
+          </label>
+
+          <label> To create account, enter a password
+            <input type="password" name="accountPW">
+          </label>
+
+        <input type="submit" value="Apply Now!">
+      </form>
+
+  </body>
+  </html>
+
 
     </form>
 
