--- a/lesson09/index.html
+++ b/lesson09/index.html
@@ -1,9 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title> Web Forms</title>
-</head>
-<body>
-</body>
+  <head>
+     <meta charset="utf-8">
+     <title>Archery-Academy.HTML</title>
+     </head>
+
+
+     <img src="images/archeryAcademy-logo-color.png"  alt="Archery Academy logo " class="center">
+    <link rel="stylesheet" type="text/css" href="styles.css">
+
+
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
+
+
+
+
+
+
+
+    <nav>
+      <a href="index.html" target="index.html">ABOUT US  /</a>
+      <a href="class-sched.html" target="class-sched">CLASSES & SPECIAL EVENTS  /</a>
+      <a href="instructors.html" target="instructors.html">INSTRUCTORS   /</a>
+      <a href="email-us.html" target="email-us.html">EMAIL US   /</a>
+    </nav>
+<!--
+* {
+    box-sizing: border-box;
+}
+
+.col {
+    float: left;
+    padding: 15px;
+    border: 5px solid red;
+
+}
+
+
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+/*grid */
+.grid-container {
+  display: grid;
+  grid: 50px / auto auto auto;
+  grid-gap: 10px;
+  background-color: #2196F3;
+  padding: 50px;
+}
+
+.grid-container > div {
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  padding: 50px 0;
+  font-size: 30px;
+  margin-top: 50px;
+}
+/*grid*/
+
+.responsive {
+  width:100%;
+  height:auto;
+}
+
+-->
+
+
+
+
+
+<video width="150" height="150" controls autoplay  >
+  <source src="SampleVideo_1280x720_1mb.mp4" type="video/mp4">
+  <source src="SampleVideo_1280x720_1mb.ogv" type="video/ogg">
+  Your browser does not support the video tag.
+</video>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <div class="w3-container w3-center w3-animate-bottom">
+    <h1>Come and learn ARCHERY! </h1>
+    <p>Straight to the Point Archery is a non profit archery education center and indoor training facility.</p>
+  </div>
+
+
+<!--insert grid-->
+
+    <div class="grid-container">
+
+        <Strong>ABOUT US: </strong>Our facility has  28 shooting (14 -  10 yard lanes and 14 – 20 yard lanes) and 2 private coaching rooms founded in 2005 by Giap Nguyen. State of the art educational and training facility with detailed technical video analysis.
+      We offer several types of lessons to accommodate everyone from the first time archer to the professional archer.
+
+    </div>
+
+<div class="grid">
+<div class="row">
+    <div class="col span_3_of_12">
+
+          <section>
+            <h4>  <strong> ACCREDITATIONS</Strong></h4>
+              USA Archery (USAA)<br>
+             Washington State Archery Association (WSAA)<br>
+             Washington State Bow Hunters (WSB)<br>
+             National Field Archery Association (NFAA)
+        </section>
+      </div>
+</div>
+</div>
+
+
+
+
+  <div class="grid">
+  <div class="row">
+      <div class="col span_8_of_12">
+
+      <section>
+        <h2>  Classes</h2>
+      Classes for  first time archer to the professional archer.
+      Offers group lesson, private class, schedule a birthday or corporate party or compete at one of our many tournaments.
+  Straight to the Point Archery also offers homeschooling programs,
+  kids club events, YMCA classes, Boy and Girl Scouts achievement programs and several
+  other youth group activities. We are dedicated to teaching valuable life skills to
+  the youth in our community through the wonderful discipline of archery.
+</section>
+
+</div>
+</div>
+</div>
+
+
+
+
+  <footer>
+  <img src="images/footerimage.jpg"    alt="footer"  class="responsive" >
+<small>
+  Nondiscriminatory Policy:
+  Next Step Archery admits students of any race, gender presentation, sexuality, religion, national origin or ethnic origin to all rights, privileges, programs and activities available to students at the school. We do not discriminate in administration of our educational policies, admission policies and other school administered programs. All students are welcome and valuable members of our community.
+
+</small>
+  </footer>
+
+
+
+
+
+
+
 </html>
