update form email-us page

--- a/lesson09/email-us.html
+++ b/lesson09/email-us.html
@@ -37,7 +37,7 @@
       <!-- the other label syntax -->
 
       <fieldset class="checkbox">
-        <legend>Please check the classes/events you are inquiring?</legend>
+        <legend>Please check the classes/events you are inquiring</legend>
         <label>
         <input type="checkbox" name="choice" value="A101 BASIC Archery">A101 BASIC Archery
         <span class="checkmark"></span>
@@ -51,15 +51,15 @@
         <span class="checkmark"></span>
         </label>
         <label>
-        <input type="checkbox" name="choice" value="Private Single Lesson">Private Single Lesson
+        <input type="checkbox" name="choice" value="Private Single Lesson"> Single Lesson
         <span class="checkmark"></span>
         </label>
         <label>
-        <input type="checkbox" name="choice" value="Private 3-Lessons">Private 3-Lessons
+        <input type="checkbox" name="choice" value="Private 3-Lessons"> 3-Lessons
         <span class="checkmark"></span>
         </label>
         <label>
-        <input type="checkbox" name="choice" value="Private 10-Lessons">Private 10-Lessons
+        <input type="checkbox" name="choice" value="Private 10-Lessons">10-Lessons
         <span class="checkmark"></span>
         </label>
         <label>
@@ -81,27 +81,11 @@
         </label>
       </fieldset>
 
-        <input type="submit"  value="SUBMIT">
+
+        <input type="submit" value="Submit">
+        <input type="reset">
+
 
   </body>
 </html>
 <!--  -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    
