--- a/lesson09/email-us.html
+++ b/lesson09/email-us.html
@@ -16,22 +16,17 @@
     <a href="email-us.html" target="email-us.html">EMAIL US   /</a>
     </nav>
 
-
   </header>
+  <form action="/action_page.php">
 
       <h2>EMAIL INQUIRY</h2>
 
     <label>First Name</label>
       <input class="w3-input w3-border" name="first" type="text">
-
-      <label>Last Name</label>
+    <label>Last Name</label>
       <input class="w3-input w3-border" name="last" type="text">
-
-<label>Email Address</label>
-      <input class="w3-input w3-border" name="last" type="text">
-
-  <label>Subject</label>
-      <input class="w3-input w3-border" name="last" type="text">
+    <label>email</label>
+      <input class="w3-input w3-border" name="email" type="text">
 
 
       <!--
@@ -81,9 +76,8 @@
         </label>
       </fieldset>
 -->
-      <form action="/action_page.php">
 
-        <input type="radio" name="choice" value="BASIC"> BASIC<br>
+        <input type="checkbox" name="choice" value="BASIC"> BASIC<br>
         <input type="radio" name="choice" value="INTERMEDIATE"> INTERMEDIATE<br>
         <input type="radio" name="choice" value="ADVANCE"> ADVANCE<br>
         <input type="radio" name="choice" value="Corporate Events"> Corporate Events<br>
@@ -94,34 +88,7 @@
 
 
 
-
-
-
-        <input type="submit" value="Submit">
-      </form>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        <form method="Get"
-
-        <input type="submit">
+        <input type="submit"  value="Submit">
 
       </form>
 
