update sched html

--- a/lesson10/class-sched.html
+++ b/lesson10/class-sched.html
@@ -1,7 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html  lang="en">
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Archery-Academy.HTML</title>
+   </head>
+
+<img src="images/archeryAcademy-logo-color.png"  alt="Archery Academy logo " class="center">
+<link rel="stylesheet" type="text/css" href="styles.css">
+
+
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
+
+
+
+
+
+
+
+<nav>
+ <a href="index.html" target="index.html">ABOUT US  /</a>
+ <a href="class-sched.html" target="class-sched">CLASSES & SPECIAL EVENTS  /</a>
+ <a href="instructors.html" target="instructors.html">INSTRUCTORS   /</a>
+ <a href="email-us.html" target="email-us.html">EMAIL US   /</a>
+</nav>
+
+<!--
 <style>
 * {
   box-sizing: border-box;
@@ -58,9 +83,9 @@
     width: 100%;
   }
 }
-</style>
-</head>
-<body>
+</style> -->
+
+
 
 <h2 style="text-align:center">Archery Academy</h2>
 <p style="text-align:center">Resize the browser window to see the effect.</p>
@@ -104,9 +129,9 @@
 </div>
 
 
-
+<!--
 <img src="images/Schedule-photo.jpg"  alt="Archery Schedule " width=635px class="center">
-
+-->
 
 </body>
 </html>
