update class sched with calendar

--- a/lesson10/class-sched.html
+++ b/lesson10/class-sched.html
@@ -7,18 +7,7 @@
    </head>
 
 <img src="images/archeryAcademy-logo-color.png"  alt="Archery Academy logo " class="center">
-<link rel="stylesheet" type="text/css" href="styles.css">
-
-
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-
-
-
-
-
-
-
-
 <nav>
  <a href="index.html" target="index.html">ABOUT US  /</a>
  <a href="class-sched.html" target="class-sched">CLASSES & SPECIAL EVENTS  /</a>
@@ -26,7 +15,7 @@
  <a href="email-us.html" target="email-us.html">EMAIL US   /</a>
 </nav>
 
-<!--
+
 <style>
 * {
   box-sizing: border-box;
@@ -83,7 +72,7 @@
     width: 100%;
   }
 }
-</style> -->
+</style>
 
 
 
@@ -119,7 +108,7 @@
 <div class="columns">
   <ul class="price">
     <li class="header">Special Events</li>
-    <li class="grey">$ ** /Event</li>
+    <li class="grey">Choose your Event</li>
     <li>Oorporate Events</li>
     <li>Birthdays</li>
     <li>Fund Raising</li>
@@ -127,7 +116,7 @@
     <li class="grey"><a href="#" class="button">Sign Up</a></li>
   </ul>
 </div>
-
+<img src="images/Schedule-photo.jpg"  alt="Archery Schedule " width=635px class="center">
 
 <!--
 <img src="images/Schedule-photo.jpg"  alt="Archery Schedule " width=635px class="center">
