update all files

--- a/lesson10/email-us.html
+++ b/lesson10/email-us.html
@@ -29,54 +29,6 @@
       <input class="w3-input w3-border" name="email" type="text">
 
 
-      <!--
-
-      <fieldset class="checkbox">
-        <legend>Please check the classes/events you are inquiring</legend>
-        <label>
-        <input type="checkbox" name="choice" value="A101 BASIC Archery">A101 BASIC Archery
-        <span class="checkmark"></span>
-        </label>
-        <label>
-        <input type="checkbox" name="choice" value="A102 INTERMEDIATE Archery">A102 INTERMEDIATE Archery
-        <span class="checkmark"></span>
-        </label>
-        <label>
-        <input type="checkbox" name="choice" value="A103 ADVANCED Archery">A103 ADVANCED Archery
-        <span class="checkmark"></span>
-        </label>
-        <label>
-        <input type="checkbox" name="choice" value="Private Single Lesson"> Single Lesson
-        <span class="checkmark"></span>
-        </label>
-        <label>
-        <input type="checkbox" name="choice" value="Private 3-Lessons"> 3-Lessons
-        <span class="checkmark"></span>
-        </label>
-        <label>
-        <input type="checkbox" name="choice" value="Private 10-Lessons">10-Lessons
-        <span class="checkmark"></span>
-        </label>
-        <label>
-        <input type="checkbox" name="choice" value="Corporate">Corporate
-        <span class="checkmark"></span>
-        </label>
-        <label>
-        <input type="checkbox" name="species" value="snake">Birthdays
-        <span class="checkmark"></span>
-        </label>
-        <label>
-        <input type="checkbox" name="species" value="snake">Fund Raising Events
-        <span class="checkmark"></span>
-        </label>
-
-        <label>
-        <input type="checkbox" name="species" value="other">Other
-        <span class="checkmark"></span>
-        </label>
-      </fieldset>
--->
-
         <input type="checkbox" name="choice" value="BASIC"> BASIC<br>
         <input type="radio" name="choice" value="INTERMEDIATE"> INTERMEDIATE<br>
         <input type="radio" name="choice" value="ADVANCE"> ADVANCE<br>
@@ -85,12 +37,26 @@
         <input type="radio" name="choice" value="Fund Raising"> Fund Raising<br>
         <input type="radio" name="choice" value="other"> Other<br>
 
-
-
-
         <input type="submit"  value="Submit">
 
       </form>
+  <img src="images/footerimage.jpg"  width=2000px  height=200px  alt="this is a footer image of the site  containing arrows"  >
+
+
+
+
+
+      <div class ="footer">
+
+  <!--      <img src="images/footerimage.jpg"    alt="footer"  class="responsive" >-->
+      <img src="images/annie-spratt-450564.jpg"  width=200px  height=200px  alt="This is a photo of two kids doing archery"  >
+
+      <small>s
+      Nondiscriminatory Policy:
+      Next Step Archery admits students of any race, gender presentation, sexuality, religion, national origin or ethnic origin to all rights, privileges, programs and activities available to students at the school. We do not discriminate in administration of our educational policies, admission policies and other school administered programs. All students are welcome and valuable members of our community.
+
+      </small>
+      </footer>
 
 
   </body>
