--- a/lesson10/index.html
+++ b/lesson10/index.html
@@ -3,20 +3,9 @@
   <head>
      <meta charset="utf-8">
      <title>Archery-Academy.HTML</title>
-     </head>
-
-
      <img src="images/archeryAcademy-logo-color.png"  alt="Archery Academy logo " class="center">
-    <link rel="stylesheet" type="text/css" href="styles.css">
-
-
+     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-
-
-
-
-
-
 
 
     <nav>
@@ -25,71 +14,16 @@
       <a href="instructors.html" target="instructors.html">INSTRUCTORS   /</a>
       <a href="email-us.html" target="email-us.html">EMAIL US   /</a>
     </nav>
-<!--
-* {
-    box-sizing: border-box;
-}
-
-.col {
-    float: left;
-    padding: 15px;
-    border: 5px solid red;
-
-}
 
 
-.row::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-/*grid */
-.grid-container {
-  display: grid;
-  grid: 50px / auto auto auto;
-  grid-gap: 10px;
-  background-color: #2196F3;
-  padding: 50px;
-}
-
-.grid-container > div {
-  background-color: rgba(255, 255, 255, 0.8);
-  text-align: center;
-  padding: 50px 0;
-  font-size: 30px;
-  margin-top: 50px;
-}
-/*grid*/
-
-.responsive {
-  width:100%;
-  height:auto;
-}
-
--->
-
-
-
-
-
-<video width="150" height="150" controls autoplay  >
+  <video width="150" height="150" controls autoplay  >
   <source src="SampleVideo_1280x720_1mb.mp4" type="video/mp4">
   <source src="SampleVideo_1280x720_1mb.ogv" type="video/ogg">
   Your browser does not support the video tag.
-</video>
+  </video>
 
-
-
-
-
-
-
-
-
-
-
-
-
+</section>
+</div>
 
   <div class="w3-container w3-center w3-animate-bottom">
     <h1>Come and learn ARCHERY! </h1>
@@ -146,7 +80,7 @@
 
 
   <footer>
-  <img src="images/footerimage.jpg"    alt="footer"  class="responsive" >
+  <img src="images/footerimage.jpg"    alt="footer"   >
 <small>
   Nondiscriminatory Policy:
   Next Step Archery admits students of any race, gender presentation, sexuality, religion, national origin or ethnic origin to all rights, privileges, programs and activities available to students at the school. We do not discriminate in administration of our educational policies, admission policies and other school administered programs. All students are welcome and valuable members of our community.
