--- a/lesson10/email-us.html
+++ b/lesson10/email-us.html
@@ -27,8 +27,9 @@
       <label>email</label>
         <input class="w3-input w3-border" name="email" type="text">
       <br>
+</form>
 
-      </html>
+<!--
       <style>
       .grid-container {
         display: grid;
@@ -59,8 +60,8 @@
 
       </style>
 
+-->
 
-<body>
   <br>
   <form>
         <input type="checkbox" name="choice" value="BASIC"> BASIC<br>
@@ -71,6 +72,7 @@
         <input type="radio" name="choice" value="Fund Raising"> Fund Raising<br>
         <input type="radio" name="choice" value="other"> Other<br>
         <input type="submit"  value="Submit">
+    </form>s
   <br>
 
 
@@ -96,27 +98,24 @@ vid.onplaying = function() {
 
 
 
-</body>
-
-
-
-
-
-
-
-
-
-
-
-
 </div>
 
 <div class="columns">
-  <img src="images/annie-spratt-450564-unsplash.jpg" width=250px  height=350px   padding= 10px  border-radius= 10px alt="This is a photo of two kids doing archery"  >
+  <p>
+    Archery Academy Staff would like to thank your
+    for your email inquiry.  Please check back your email
+    soon for our response. Thank you.
+
+  <audio controls>
+  <source src="images/recording.ogg" type="audio/ogg">
+  <source src="images/recording.m4a" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
+</p>
 </div>
 
 <div class="columns">
-  <img src="images/annie-spratt-450564-unsplash.jpg" width=250px  height=350px   padding= 10px  border-radius= 10px alt="This is a photo of two kids doing archery"  >
+  <img src="images/annie-spratt-450564-unsplash.jpg" width=250  height=350  alt="This is a photo of two kids doing archery"  >
 </div>
 
 
@@ -130,7 +129,6 @@ vid.onplaying = function() {
   are welcome and valuable members of our community.
 </small>
 </p>
-</div>
 
 
 
@@ -162,10 +160,11 @@ vid.onplaying = function() {
   <!--      <img src="images/footerimage.jpg"    alt="footer"  class="responsive" >-->
 
 
-      </small>
-      </footer>
 
 
-  </body>
-</html>
+
+
+
+
+
 <!--  -->
