--- a/lesson10/email-us.html
+++ b/lesson10/email-us.html
@@ -72,7 +72,7 @@
         <input type="radio" name="choice" value="Fund Raising"> Fund Raising<br>
         <input type="radio" name="choice" value="other"> Other<br>
         <input type="submit"  value="Submit">
-    </form>s
+    </form>
   <br>
 
 
